src/test/ui/span/borrowck-let-suggestion-suffixes.nll.stderr
error: compilation successful
  --> $DIR/borrowck-let-suggestion-suffixes.rs:61:1
   |
LL | / fn main() { #![rustc_error] // rust-lang/rust#49855
LL | |     f();
LL | | }
   | |_^

error: aborting due to previous error

